--- a/assets/style.css
+++ b/assets/style.css
@@ -81,6 +81,22 @@ nav[data-type="toc"] ol {
     list-style-type: none;
 }
 
+/* Admonition */
+
+div[data-type="note"] {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    color: #8a6d3b;
+    background-color: #fcf8e3;
+    border-color: #faebcc;
+}
+
+div[data-type="note"] p {
+    margin: 0;
+}
+
 /* Aside */
 
 div.sidebar {
